syntax = "proto3";

package userproto;

service UserService {
    rpc Create(CreateRequest) returns (CreateResponse);
    rpc Delete(DeleteRequest) returns (DeleteResponse);
};

message CreateRequest {
    string email = 1;
    string username = 2;
    string password = 3;
};

message CreateResponse {
    int32 id = 1;
};

message DeleteRequest {
    int32 id = 1;
};

message DeleteResponse {
    string res = 1;
};